--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "demo1",
   "version": "0.1.0",
   "private": true,
+  "engines" : { 
+    "npm" : ">=8.3.1",
+    "node" : ">=16.14.0"
+  },
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
